--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="cal.css">
 </head>
 <body>
+    <h2 class="text">My Calculator</h2>
     <div class="container">
         <div id="display"> </div>
         <div class="buttons">
