--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -49,19 +49,26 @@
     </div>
 
   </nav>
+  <!-- Move up -->
+
+
+  <a href="#"> <i style="font-size: 40px; color:black; position: fixed; right: 10px; bottom: 10px;"
+      class="fa fa-arrow-circle-up"></i>
+  </a>
   
 
-<div class="container" id="Home">
-  <div>
-    <h2 id="hello" >Hello, I'm</h2>
-    <br>
-    <h1 class="text-warning m-heading">Saurabh Rajput</h1>
+
+  <div class="container" id="Home">
+    <div>
+      <h2 id="hello">Hello, I'm</h2>
+      <br>
+      <h1 class="text-warning m-heading">Saurabh Rajput</h1>
       <h2 class="text-white">Web Developer</h2>
+    </div>
+    <div>
+      <!-- <img src="./Images/Background.jpeg" alt="img-fluid"> -->
+    </div>
   </div>
-  <div>
-    <!-- <img src="./Images/Background.jpeg" alt="img-fluid"> -->
-  </div>
-</div>
 
   <div id="about" class="row">
     <div class="col-lg-6">
@@ -72,22 +79,9 @@
       <h1 class="heading">A little bit about me</h1>
       <br />
 
-       <p>My name is Saurabh Rajput. I'm a Front End Developer ,Attending full stack Webdevlopment
-         Bootcamp at Acciojob. <br> 
-                             I did some projects using Html , css , Bootstrap and JavaScript .....you can check 
-          
-         </p>
-    <!--  I am not from coding background .when 1st lockdown
-      was started then i saw video on Youtube . and My interest come into coding
-        after six months i decided i want to move my carrier in computer field or coding
-        field . Till now i know JavaScript and Java languges i dont everything about those
-        languges but know Very well.
-      </p>
-      <p>My name is Saurabh Rajput .I am not from coding background .when 1st lockdown
-        was started then i saw video on Youtube . and My interest come into coding
-        after six months i decided i want to move my carrier in computer field or coding
-        field . Till now i know JavaScript and Java languges i dont everything about those
-        languges but know Very well. -->
+      <p>My name is Saurabh Rajput. I'm a Front End Developer ,Attending full stack Webdevlopment
+        Bootcamp at Acciojob. <br>
+        I did some projects using Html , css , Bootstrap and JavaScript .....you can check
       </p>
       <div class="row">
         <div class="col-lg-6">
@@ -110,8 +104,8 @@
     <section id="skill" class="skill">
       <h1>Skills</h1>
       <div>
-        <p>I know html , css ,Bootstrap java and JavaScript 
-           I did Projects in Html ,css
+        <p>I know html , css ,Bootstrap java and JavaScript
+          I did Projects in Html ,css
           and Bootstrap and I did Projects in JavaScript also
           You can see in MyProject section
         </p>
@@ -159,7 +153,7 @@
       <div id="projects" class="container">
         <h1 class="">My Projects</h1>
         <div class="row">
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/Tindog.PNG" class="card-img-top" style="height: 13rem;" alt="..." />
               <div class="card-body">
@@ -169,21 +163,21 @@
                   you can also check using below buttons
 
                 </p>
-                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Tindog.html" class="btn btn-warning">See
-                  Project</a>
+                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Tindog.html" class="btn btn-warning">
+                  See Project</a>
                 <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/blob/main/Tindog.html" id="seebtn"
                   class="btn btn-warning">See Code</a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/animals.PNG" class="card-img-top " alt="..." style="height: 13rem;" />
               <div class="card-body">
                 <h5 class="card-title">Animals </h5>
                 <p class="card-text">
                   I have made simple Animals website using Html and css
-                  you can also check using below buttons 
+                  you can also check using below buttons
                 </p>
                 <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/assign5.html" class="btn btn-warning">See
                   Project</a>
@@ -192,7 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/AsianPaints.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
@@ -208,7 +202,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/Bubble.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
@@ -224,7 +218,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/ColorBoard.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
@@ -240,7 +234,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
+          <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/Clock.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
@@ -286,7 +280,7 @@
         </h5>
       </div>
     </footer>
- <script src="PrPortFolio.js"></script>
+    <script src="PrPortFolio.js"></script>
 </body>
 
 </html>
