--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -81,7 +81,7 @@
 
       <p>My name is Saurabh Rajput. I'm a Front End Developer ,Attending full stack Webdevlopment
         Bootcamp at Acciojob. <br>
-        I did some projects using Html , css , Bootstrap and JavaScript .....you can check
+        I did some projects using Html , css , Bootstrap , JavaScript and React .....
       </p>
       <div class="row">
         <div class="col-lg-6">
@@ -104,9 +104,8 @@
     <section id="skill" class="skill">
       <h1>Skills</h1>
       <div>
-        <p>I know html , css ,Bootstrap java and JavaScript
-          I did Projects in Html ,css
-          and Bootstrap and I did Projects in JavaScript also
+        <p>I know html , css ,Bootstrap java , JavaScript and React
+          I did Projects in Html , css , Bootstrap , JavaScript and React also. 
           You can see in MyProject section
         </p>
         <div class="skill-bars">
@@ -132,7 +131,14 @@
             </div>
           </div>
           <div>
-            <h5 class="skill">JAVASCRIPT<i class="val"> 65%</i></h5>
+            <h5 class="skill">JAVASCRIPT<i class="val"> 70%</i></h5>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuemin="0" aria-voluemax="0"
+                aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div>
+            <h5 class="skill">React<i class="val"> 65%</i></h5>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuemin="0" aria-voluemax="0"
                 aria-valuemax="100"></div>
@@ -153,31 +159,15 @@
       <div id="projects" class="container">
         <h1 class="">My Projects</h1>
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-5">
-            <div class="card" style="width: 18rem;">
-              <img src="./images/Tindog.PNG" class="card-img-top" style="height: 13rem;" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Tindog</h5>
-                <p class="card-text">
-                  I have made simple Tindog website using Html and css
-                  you can also check using below buttons
-
-                </p>
-                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Tindog.html" class="btn btn-warning">
-                  See Project</a>
-                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/blob/main/Tindog.html" id="seebtn"
-                  class="btn btn-warning">See Code</a>
-              </div>
-            </div>
-          </div>
+        
           <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
               <img src="./images/animals.PNG" class="card-img-top " alt="..." style="height: 13rem;" />
               <div class="card-body">
                 <h5 class="card-title">Animals </h5>
                 <p class="card-text">
-                  I have made simple Animals website using Html and css
-                  you can also check using below buttons
+                  I have made simple Animals website using Html , css and Bootstrap.
+                  You can also check using below buttons
                 </p>
                 <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/assign5.html" class="btn btn-warning">See
                   Project</a>
@@ -186,18 +176,35 @@
               </div>
             </div>
           </div>
+            <div class="col-lg-4 col-md-6 mb-5">
+            <div class="card" style="width: 18rem;">
+              <img src="./images/MeditationApp.png" class="card-img-top" style="height: 13rem;" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Meditation App</h5>
+                <p class="card-text">
+                  I have made simple Meditaion website using Html and css and JavaScript.
+                  You can also check using below buttons.
+
+                </p>
+                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Project/MeditationApp/MeditationApp.html" class="btn btn-warning">
+                  See Project</a>
+                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/tree/main/Project/MeditationApp" id="seebtn"
+                  class="btn btn-warning">See Code</a>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
-              <img src="./images/AsianPaints.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
+              <img src="./images/BookList.png" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
-                <h5 class="card-title">AsianPaints</h5>
+                <h5 class="card-title">MyBookList</h5>
                 <p class="card-text">
-                  I have made AsianPaints Game website using Html, css and JS
-                  you can check using below buttons
+                  I have made simple MyBookList website using Html and css and JavaScript.
+                  You can also check using below buttons.                 
                 </p>
-                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/AsianPaints/asianPaints.html"
+                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Project/BooklistApp/BooklistApp.html"
                   class="btn btn-warning">See Project</a>
-                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/tree/main/AsianPaints" id="seebtn"
+                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/tree/main/Project/BooklistApp" id="seebtn"
                   class="btn btn-warning">See Code</a>
               </div>
             </div>
@@ -208,7 +215,7 @@
               <div class="card-body">
                 <h5 class="card-title">Bubble Game</h5>
                 <p class="card-text">
-                  I have made BubbleGame website using Html, css and JS
+                  I have made BubbleGame website using Html, css and JavaScript
                   you can check using below buttons
                 </p>
                 <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/Ballon%20Game/PrBubbleGame.html"
@@ -220,31 +227,31 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
-              <img src="./images/ColorBoard.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
+              <img src="./images/Tours.png" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
-                <h5 class="card-title">Color Board</h5>
+                <h5 class="card-title">Our Tours</h5>
                 <p class="card-text">
-                  I have made ColorBoard Game website using Html, css and JS
+                  I have made simple Tours website using React
                   you can check using below buttons
                 </p>
-                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/color%20Board/PracticeColorboard.html"
+                <a href="https://tourssaurabh.netlify.app/"
                   class="btn btn-warning">See Project</a>
-                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/tree/main/color%20Board" id="seebtn"
+                <a href="https://github.com/Saurabhrajput1221/saurabh-React/tree/master/Tours" id="seebtn"
                   class="btn btn-warning">See Code</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-5">
             <div class="card" style="width: 18rem;">
-              <img src="./images/Clock.PNG" class="card-img-top" alt="..." style="height: 13rem;" />
+              <img src="./images/BirthDay.png" class="card-img-top" alt="..." style="height: 13rem;" />
               <div class="card-body">
-                <h5 class="card-title">JS clock</h5>
+                <h5 class="card-title">Birthday Remainder</h5>
                 <p class="card-text">
-                  I have made JavaScript clock website using Html, css and JS
-                  you can check using below buttons</p>
-                <a href="https://saurabhrajput1221.github.io/Saurabhrajput1221/JSclock/Prjsclock.html"
+                  I have made simple Birthday Remainder website using React.
+                  You can check using below buttons.</p>
+                <a href="https://rajputsaurabh.netlify.app/"
                   class="btn btn-warning">See Project</a>
-                <a href="https://github.com/Saurabhrajput1221/Saurabhrajput1221/tree/main/JSclock" id="seebtn"
+                <a href="https://github.com/Saurabhrajput1221/saurabh-React/tree/master/BirthDay" id="seebtn"
                   class="btn btn-warning">See Code</a>
               </div>
             </div>
