--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -110,16 +110,16 @@
         </p>
         <div class="skill-bars">
           <div>
-            <h5 class="skill">HTML<i class="val"><span> 85%</span></i></h5>
+            <h5 class="skill">HTML<i class="val"><span> 95%</span></i></h5>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuemin="0" aria-voluemax="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
           <div>
-            <h5 class="skill">CSS<i class="val"> 82%</i></h5>
+            <h5 class="skill">CSS<i class="val"> 92%</i></h5>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuemin="0" aria-voluemax="0"
+              <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuemin="0" aria-voluemax="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
@@ -138,16 +138,30 @@
             </div>
           </div>
           <div>
-            <h5 class="skill">React<i class="val"> 65%</i></h5>
+            <h5 class="skill">React<i class="val"> 75%</i></h5>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuemin="0" aria-voluemax="0"
+              <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuemin="0" aria-voluemax="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
           <div>
-            <h5 class="skill">JAVA<i class="val"> 55%</i></h5>
+            <h5 class="skill">JAVA<i class="val"> 85%</i></h5>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuemin="0" aria-voluemax="0"
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuemin="0" aria-voluemax="0"
+                aria-valuemax="100"></div>
+            </div>
+          </div>
+<div>
+            <h5 class="skill">C, C++<i class="val"> 85%</i></h5>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuemin="0" aria-voluemax="0"
+                aria-valuemax="100"></div>
+            </div>
+          </div>
+<div>
+            <h5 class="skill">PYTHON<i class="val"> 85%</i></h5>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuemin="0" aria-voluemax="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
